fix: fix overflow 1024>

--- a/rs-selectors/src/global.css
+++ b/rs-selectors/src/global.css
@@ -49,7 +49,7 @@ body.body__hint_visible .help__hint {
 .content {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    /* gap: 10px; */
     min-height: 100vh;
     overflow-y: auto;
     flex-grow: 1;
@@ -89,10 +89,11 @@ header {
 }
 
 .logo__image {
-    height: 50px;
+    height: 20px;
 }
 
 .logo__content {
+    font-size: 20px;
 }
 
 .main__help {
@@ -163,7 +164,7 @@ main .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 50px;
+    gap: 10px;
 }
 
 .main__game {
@@ -171,11 +172,11 @@ main .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
 }
 
 .main__title {
-    font-size: 35px;
+    font-size: 25px;
 }
 
 /* ---- FOOTER ----- */
@@ -187,16 +188,17 @@ footer {
     text-align: center;
     flex: 0 0 auto;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    font-size: 16px;
 }
 
 
 .github__image {
-    height: 30px;
+    height: 15px;
 }
 
 .school__image {
     position: relative;
-    height: 50px;
+    height: 30px;
 }
 
 .school__image::after {
